objects/Attribute_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Field_API_Name__c</fullName>
        <label>Attribute Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Field_Value__c</fullName>
        <label>Attribute Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Group_Name__c</fullName>
        <label>Attribute Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Unique_Identifier__c</fullName>
        <label>Attribute Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CPQ_MLGPLUS__c</fullName>
        <label>CPQ MLGPLUS</label>
        <referenceTo>CPQ_MLGPLUS__c</referenceTo>
        <relationshipLabel>Attribute Rules</relationshipLabel>
        <relationshipName>Attribute_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HasChildRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasChildRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mask_Layers__c</fullName>
        <label>Mask Layers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Rule</label>
        <referenceTo>Attribute_Rule__c</referenceTo>
        <relationshipLabel>Child Rules</relationshipLabel>
        <relationshipName>Attribute_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attribute Rule</label>
    <nameField>
        <label>Attribute Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>